my result align self fix

--- a/src/app/modules/my-results/my-results.component.scss
+++ b/src/app/modules/my-results/my-results.component.scss
@@ -199,6 +199,8 @@
               grid-column: 3/4;
               grid-row: 1/3;
               justify-self: flex-end;
+              align-self: center;
+              margin-top: 0;
             }
           }
         }
